--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="/styles/main.scss">
+    <title>Main page</title>
   </head>
+
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <a href="#" class="header__logo">Remember<span class="header__logo--colored">That</span></a>
+      <div class="nav-container">
+        <nav class="nav">
+          <img id="mobile-exit" class="mobile-menu-exit" src="./images/exit.svg" alt="exit navigation menu">
+          <ul class="nav__list primary--nav">
+            <li class="nav__item ">
+              <a href="#" class="nav__link active--link">Home</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Features</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Pricing</a>
+            </li>
+          </ul>
+
+          <ul class="nav__list secondary--nav">
+            <li class="nav__item">
+              <a href="#" class="nav__link">Contact</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link go-premium-cta">Go Premium</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <img id="mobile-cta" class="mobile-menu" src="./images/menu.svg" alt="mobile menu">
+    </header>
+
+    <section class="hero">
+      <div class="hero__container container">
+        <div class="hero__content">
+          <p class="hero__subhead">It's Nitty &amp; Gritty</p>
+          <h1 class="hero__headline">A Task App That Doesn't Stink</h1>
+          <div class="hero__cta">
+            <a href="#" class="primary-cta">Try for free</a>
+            <a href="#" class="watch-video-cta">
+              <img class="video-icon" src="./images/watch.svg" alt="Watch a video">
+              Watch a video
+            </a>
+          </div>
+        </div>
+        <img class="hero__image" src="./images/illustration.svg" alt="Illustration">
+      </div>
+    </section>
+
+    <section class="features">
+      <div class="features__container container">
+        <ul class="features__list">
+          <li class="features__items">Unlimited Tasks</li>
+          <li class="features__items">SMS Task Reminders</li>
+          <li class="features__items">Confetti Explosions upon Task Completions</li>
+          <li class="features__items">Social Media Announcements</li>
+          <li class="features__items">Real Time Collaboration</li>
+          <li class="features__items">Other awesome features</li>
+        </ul>
+        <img src="./images/holding-phone.jpg" alt="man holding phone" class="features__image">
+      </div>
+    </section>
+
+    <section class="testimonials">
+      <div class="testimonials__container container">
+        <ul class="testimonials__list">
+          <li class="testimonials__item">
+            <img src="./images/person.jpg" alt="Peron" class="testimonials__image">
+            <blockquote>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, voluptate. Dolor excepturi, totam
+              asperiores tempore modi rerum. Placeat, nihil culpa.</blockquote>
+            <cite>- Jane Doe</cite>
+          </li>
+          <li class="testimonials__item">
+            <img src="./images/person.jpg" alt="Peron" class="testimonials__image">
+            <blockquote>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, voluptate. Dolor excepturi, totam
+              asperiores tempore modi rerum. Placeat, nihil culpa.</blockquote>
+            <cite>- Jane Doe</cite>
+          </li>
+          <li class="testimonials__item">
+            <img src="./images/person.jpg" alt="Peron" class="testimonials__image">
+            <blockquote>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, voluptate. Dolor excepturi, totam
+              asperiores tempore modi rerum. Placeat, nihil culpa.</blockquote>
+            <cite>- Jane Doe</cite>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="contact">
+      <div class="contact__container container">
+        <div class="contact__left">
+          <h2 class="contact__headline">Contact</h2>
+          <form class="contact__form" action="">
+            <label class="contact__label" for="name">Name</label>
+            <input class="contact__input" type="name" id="name" name="name">
+
+            <label class="contact__label" for="email">E-mail</label>
+            <input class="contact__input" type="email" id="email" name="email">
+
+            <label class="contact__label" for="message">Message</label>
+            <textarea name="message" id="message" cols="30" rows="10" placeholder="Type your message here"></textarea>
+            <input class="contact__message-btn" type="submit" value="Send message">
+          </form>
+        </div>
+        <div class="contact__right">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13220.749057489153!2d-118.38138744999999!3d34.064713499999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2b94ffec7908f%3A0x9497d7f9132676c8!2z0JHQtdCy0LXRgNC70ZYt0JPRltC70LvQtywg0JrQsNC70ZbRhNC-0YDQvdGW0Y8gOTAyMTEsINCh0L_QvtC70YPRh9C10L3RliDQqNGC0LDRgtC4INCQ0LzQtdGA0LjQutC4!5e0!3m2!1suk!2sua!4v1674129548685!5m2!1suk!2sua"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+    </section>
+
+    <script src="./scripts.js"></script>
+
   </body>
+
 </html>
